--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-       <link rel="stylesheet" type="text/css" href="/public/css/style.css" />
+       {{!-- <link rel="stylesheet" type="text/css" href="/public/css/style.css" /> --}}
     <title>Cheer Ups</title>
 </head>
 <body>
