--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,35 @@
+<div class="modal">
+    <div class="modal-text-box">
+        
+        <div class="modal-text">
+            <h4>Welcome to Cheer Ups</h4>
+            <p>This app not only allows you to brighten up your day. You can also pay it forward by creating and sharing quotes that will brighten the days of others</p>
+
+            <p>At the bottom of each Cheer Up is an option to share. You can share via Social Media or Email</p>
+
+            <p>There is also a QRcode at the bottom of each Cheer Up. This allows you to scan and view the Cheer Up on Android and iOS devices.</p>
+
+            <button onclick="modalGone()" class="modal-button">Enter</button>
+
+
+        </div>
+        <div class="modal-text-box-img">
+            <img class="modal-img" src="../public/img/Canva - Cheerful Young Man Wearing Plaid Shirt Standing.png">
+
+        </div>
+
+    </div> 
+</div>
+
+
+
+
+
+
+
+
+
+
 <h1>Welcome to Cheer Ups</h1>
 <ul>
  {{#each cheer}}
