--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-       {{!-- <link rel="stylesheet" type="text/css" href="/public/css/style.css" /> --}}
+       <link rel="stylesheet" type="text/css" href="/public/css/style.css" />
     <title>Cheer Ups</title>
 </head>
 <body>
     {{{body}}}
+
+    <script src="../app.js"></script>
 </body>
 </html>
