--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+
+
 .modal-img {
     width: auto;
     height: auto;
@@ -62,6 +68,149 @@
 
 
 
+/*************NAV***************/
+.search,.edit,.more,.home{
+    display:none;
+}
+
+.logo-holder{
+    width:50%;
+    float: left;
+}
+.logo-and-nav{
+    width: 100%;
+}
+nav{
+    width:45%;
+    float: left;
+}
+ul{
+    float: left;
+}
+
+li{
+    list-style: none;
+    float: left;
+}
+
+a{
+    text-decoration: none;
+    color:black;
+}
+.fa-home,.fa-search,.fa-pen{
+    width: 10px;
+    height: 10px;
+}
+.logo{
+    font-family: 'Permanent Marker', cursive;
+    color: orange;
+    margin-left: 10px;
+    margin-top:0;
+    margin-bottom:0;
+    font-size: 1.5em;
+
+
+}
+
+.fa-bars{
+    width:20px;
+    height:20px;
+    float:left;
+    margin-top:4px;
+}
+.nav{
+    width: 50%;
+    float: left;
+    margin-top: 17px;
+}
+.hamburger{
+    float: right;
+    float:right;
+}
+/******CHEERS********/
+
+.cheer-img {
+    width: auto;
+    height: auto;
+    max-width: 146%;
+}
+
+
+
+.cheer-text-box {
+    width: 80%;
+    height: 184px;
+    margin: auto;
+    display: none;
+    background: linear-gradient(#ffad01, #fea200);
+    overflow: hidden;
+    position: relative;
+    max-width: 309px;
+    max-height: 184px;
+    padding: 14px;
+    float: left;
+    margin-top:50px;
+}
+
+
+
+.cheer-text {
+    width: 50%;
+    font-size: 10px;
+    line-height: 11px;
+    margin-top: 0px;
+}
+
+.cheer-text p{
+    
+   padding: 0px;
+}
+
+
+.cheer-text-box-img {
+    width: 61%;
+    position: absolute;
+    left: 136px;
+    top: 35px;
+    max-width: 184px;
+    max-height: 184px;
+    min-width: 184px;
+    min-height: 184px;
+}
+
+
+
+
+.qr-code{
+    height: 10px;
+    width: 10px;
+}
+
+
+
+@media(max-width:318px){
+
+    .cheer-img{
+        display: none;
+    }
+
+
+}
+
+.cheer h4{
+    margin: 0 auto;
+
+}
+
+.cheer p{
+    margin-bottom: 5px;
+
+}
+
+
+
+/************************/
+
 
 @media(max-width:318px){
 
@@ -71,6 +220,40 @@
 
 
 }
+/**********/
+
+@media(max-width:340px){
+
+    .cheer-text-box-img {
+        width: 61%;
+        position: absolute;
+        left: 81px;
+        top: 35px;
+        max-width: 184px;
+        max-height: 184px;
+        min-width: 184px;
+        min-height: 184px;
+    }
+
+
+}
+
+@media(min-width:341px) and (max-width:386px){
+    .cheer-text-box-img {
+        width: 61%;
+        position: absolute;
+        left: 94px;
+        top: 35px;
+        max-width: 184px;
+        max-height: 184px;
+        min-width: 172px;
+    }
+
+}
+
+
+
+/**********/
 
 .modal h4{
     margin: 0 auto;
@@ -86,3 +269,35 @@
     margin: 0;
     font-size: 10px;
 }
+
+
+
+
+
+.arrow-holder{
+        width: 3%;
+        float: left;
+        margin: 63px 2px;
+        height: 190px;
+}
+
+/**************/
+
+
+.fa-chevron-right,.fa-chevron-left{
+    height: 100%;
+    width: 100%;
+    float: left;
+}
+
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    clear: both;
+}
+
+.cheer-text-box:first-of-type {
+    display: block;
+  }
