--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,17 @@
 <div class="modal">
     <div class="modal-text-box">
-        
+
         <div class="modal-text">
             <h4>Welcome to Cheer Ups</h4>
-            <p>This app not only allows you to brighten up your day. You can also pay it forward by creating and sharing quotes that will brighten the days of others</p>
+            <p>This app not only allows you to brighten up your day. You can also pay it forward by creating and sharing
+                quotes that will brighten the days of others</p>
 
             <p>At the bottom of each Cheer Up is an option to share. You can share via Social Media or Email</p>
 
-            <p>There is also a QRcode at the bottom of each Cheer Up. This allows you to scan and view the Cheer Up on Android and iOS devices.</p>
+            <p>There is also a QRcode at the bottom of each Cheer Up. This allows you to scan and view the Cheer Up on
+                Android and iOS devices.</p>
 
-            <button onclick="modalGone()" class="modal-button">Enter</button>
+            <button class="modal-button">Enter</button>
 
 
         </div>
@@ -18,24 +20,74 @@
 
         </div>
 
-    </div> 
+    </div>
 </div>
 
 
 
+<div class="container">
+
+    <div class="prev arrow-holder">
+        <i class="fas fa-chevron-left"><svg aria-hidden="true" focusable="false" data-prefix="fas"
+                data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                <path fill="orange"
+                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                </path>
+            </svg></i>
+    </div>
 
 
 
 
 
+    {{#each cheer}}
+
+        <div class="cheer-text-box">
+
+            <div class="cheer-text">
+                <h4>Welcome to Cheer Ups</h4>
+
+                <p>{{this.text}}</p>
+
+                {{!-- <button class="modal-button">Enter</button> --}}
 
 
-<h1>Welcome to Cheer Ups</h1>
+            </div>
+            <div class="cheer-text-box-img">
+                <img class="cheer-img" src="../public/img/Canva - Cheerful Young Man Wearing Plaid Shirt Standing.png">
+
+            </div>
+                <div class="qr-code">
+                    <img class="qr-code" src="../public/img/frame.png">
+                </div>
+
+        </div>
+
+    {{/each}}
+
+
+{{!-- </div> --}}
+    <div class="next arrow-holder">
+
+        <i class="fas fa-chevron-right">
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 320 512">
+                <path fill="orange"
+                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                </path>
+            </svg>
+        </i>
+    </div>
+
+</div>
+
+{{!-- <h1>Welcome to Cheer Ups</h1>
 <ul>
  {{#each cheer}}
    
-    <li><a href="/{{this.title}}">{{this.title}}</a></li>
-   
- {{/each}}
-</ul>
-
+    <li><a href="/{{this.title}}">{{this.text}}</a></li>
+{{!--    
+ {{/each}} 
+{{!-- </ul> --}}
