--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,9 +69,9 @@ body{
 
 
 /*************NAV***************/
-.search,.edit,.more,.home{
+/* .search,.edit,.more,.home{
     display:none;
-}
+} */
 
 .logo-holder{
     width:50%;
@@ -97,9 +97,10 @@ a{
     text-decoration: none;
     color:black;
 }
-.fa-home,.fa-search,.fa-pen{
+.fa-home,.fa-search,.fa-pen,.fa-sign-in-alt{
     width: 10px;
     height: 10px;
+    margin-left: 5px;
 }
 .logo{
     font-family: 'Permanent Marker', cursive;
