--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,7 @@
 <h1>Register</h1>
 <form action="/user/register" method="POST">
     <label for="">Create Cheer</label>
-
+{{include ./partials/messages}}
     <h4>Name:</h4>
     <input type="text" name="name" placeholder="John Smith">
 
