--- a/views/index.hbs
+++ b/views/index.hbs
@@ -52,7 +52,7 @@
                 {{!-- <button class="modal-button">Enter</button> --}}
 
 
-                   <a href="/cheer/edit/{{this.title}}"> <button>More Options</button></a>
+                   <a href="/cheer/{{this.title}}"> <button>More Options</button></a>
 
             </div>
             <div class="cheer-text-box-img">
