--- a/views/show.hbs
+++ b/views/show.hbs
@@ -34,8 +34,8 @@
 
 
             </div>
-            <div class="cheer-text-box-img">
-                <img class="cheer-img" src="../public/img/Canva - Cheerful Young Man Wearing Plaid Shirt Standing.png">
+            <div class="single-cheer-text-box-img">
+                <img class="cheer-img" src="../public/img/Canva - Image of Young European Woman 20S with Long Hair Smiling and Sho.png">
 
             </div>
                 <div class="qr-code">
@@ -52,8 +52,8 @@
 </div>
 
 
-<form action="/{{myInstance.title}}?_method=delete" method="post" >
+<form action="/cheer/{{myInstance.title}}?_method=delete" method="post" >
     <input type="submit" value="Delete">
 </form> 
 
-<a href="/edit/{{myInstance.title}}">Edit</a>
+<a href="/cheer/edit/{{myInstance.title}}">Edit</a>
