--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,7 +1,7 @@
-<form action="/cheer/{{myInstance.title}}?_method=put"  method="post">
+<form action="/cheer/edit/{{myInstance.title}}?_method=put"  method="post">
     <p>
         <label for="title">Title</label>
-        <input type="text" value="{{title}}" name="title">
+        <input type="text" value="{{this.title}}" name="title">
     </p>
     <p>
         <label for="complete">Complete</label>
