--- a/views/find.hbs
+++ b/views/find.hbs
@@ -1,5 +1,5 @@
 
-    <form action="/cheer/show/{{this.topic}}" method="GET">
+    <form class="find-area" action="/cheer/show/{{this.topic}}" method="GET">
    <label for="">Find Cheers</label>
 
    <h4>What topic would you like to show</h4>
