--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,18 +1,19 @@
-<form action="/cheer/edit/{{myInstance.title}}?_method=put"  method="post">
-    <p>
-        <label for="title">Title</label>
-        <input type="text" value="{{this.title}}" name="title">
-    </p>
-    <p>
-        <label for="complete">Complete</label>
-        {{#if complete}}
-            <input type="checkbox" name="complete" checked>
-        {{else}}
-            <input type="checkbox" name="complete">
-        {{/if}}
-    </p>
+<form class="edit-area" action="/cheer/edit/{{myInstance.title}}?_method=put"  method="post">
+  
+     <h4>Title</h4>
+    <input type="text" value="{{this.title}}" name="title">
+
+    <h4>Choose Topic</h4>
+    <select name="topic">
+        <option name="topic" value="Motivation">Motivation</option>
+        <option name="topic" value="Another Chance">Another Chance</option>
+        <option name="topic" value="Love">Love</option>
+    </select>
+
+
+
+    <h4>Enter your Cheer Quote</h4>
+    <textarea name="text" rows="10" cols="30" placeholder="Quote"></textarea>
+
     <input type="submit" value="Update">
 </form>
-
-
- 
