--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+<div class="login-area">
 <h1>Login</h1>
 <form action="/user/login" method="POST">
 
@@ -11,3 +12,4 @@
 
     <input type="submit" value="Submit">
 </form>
+</div>
