--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,5 +1,4 @@
-<form action="/cheer" method="POST">
-    <label for="">Create Cheer</label>
+<form class="create-area" action="/cheer" method="POST">
 
     <h4>Title</h4>
     <input type="text" name="title" placeholder="Title">
