--- a/views/show.hbs
+++ b/views/show.hbs
@@ -32,7 +32,8 @@
     </div>
 </div>
 
-<div class="buttons" <form action="/cheer/{{myInstance.title}}?_method=delete" method="post">
+<div class="buttons" >
+<form action="/cheer/{{myInstance.title}}?_method=delete" method="post">
     <input type="submit" value="Delete">
     </form>
 
