--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,11 +118,11 @@ nav{
     width:45%;
     float: left;
 }
-ul{
+nav ul{
     float: left;
 }
 
-li{
+nav li{
     list-style: none;
     float: left;
 }
@@ -148,11 +148,11 @@ a{
 
 }
 
-.fa-bars{
-    width:20px;
-    height:20px;
-    float:left;
-    margin-top:4px;
+ .fa-bars {
+        width: 20px;
+        height: 20px;
+        float: right;
+        margin-top: 4px;
 }
 .nav{
     width: 50%;
@@ -169,73 +169,38 @@ a{
 
 /*************/
 
-.Social-Media{
-    width: 60%;
+.social-media{
     background-color: #14FFE3;
-    overflow: hidden;
-    margin: auto;
+    display: flex;
+
     display: none;
-
-}
-
-
-    .mail {
-        width: 100%;
-        /* height: 19%; */
-        clear: both;
-        padding-top: 47px;
-        padding-bottom: 20px;
-        text-align: center;
-        margin: auto;
-        font-size: 1em;
-       
-        overflow: auto;
-}
-
-.mail-btn{
-    float: left;
-    width: 11%;
-}
-.fb, .linkedin, .pinterest {
-    
-    width: 82%;
-    /* height: 19%; */
-    clear: both;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    width: 30%;
+    height: auto;
+    z-index: 1;
+    overflow: hidden;
     text-align: center;
     margin: auto;
-    font-size: 1em;
-    overflow: auto;
+    position: absolute;
+    top: 8%;
+    left: 35%;
+    justify-content: space-around;
 }
 
-.twitter{
-    width: 100%;
+.social-media ul{padding-left: 0}
+
+.social-media li{
+    list-style: none;
+    line-height: 2em;
     clear: both;
-    padding-top: 47px;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: auto;
-    font-size: 1em;
-    overflow: auto;
 }
 
-.fb-share-button,.linkedin-btn,.pin-btn,.twitter-btn{
-    float: left;
-    width: 11%;
-}
-
-.linkedin-text,.pinterest-text,.fb-text,.twitter-text,.mail-text{
-    width: 50%;
+.close{
+    width: 10%;
+    height: 10%;
     float: right;
-    margin: 0;
-    padding: 0;
+    margin: 5px;
+    
 }
-
-h4{
-    margin: 0;
-}
-
 /******CHEERS********/
 
 .cheer-img {
@@ -293,12 +258,22 @@ h4{
 } */
 
 
-    .qr-code,.fa-share-square {
+    .qr-code{
         height: 2em;
         width: 2em;
         float: left;
         display: block;
         margin-left: 10px;
+}
+
+
+.fa-share-square {
+
+    height: 2em;
+    width: 2em;
+    float: right;
+    display: block;
+    margin-left: 10px;
 }
 
 .connect{
@@ -472,6 +447,47 @@ h4{
             min-width: 184px;
             min-height: 184px;
         }
+
+  }
+
+
+  @media(min-width:700px){
+
+ 
+
+.modal-text-box-img {
+    width: 61%;
+    position: absolute;
+    left: 67%;
+    top: 61%;
+    max-width: 184px;
+    max-height: 184px;
+    min-width: 184px;
+    min-height: 184px;
+    transform: translate(-50%, -50%);
+    transform-origin: center center;
+}
+
+
+
+.modal-text-box {
+    resize: both;
+    height: 192px;
+    width: 95%;
+    margin: 100px auto;
+    display: block;
+    /* background: linear-gradient(#ffad01, #fea200); */
+    background: #14FFE3;
+    overflow: hidden;
+    position: relative;
+    max-width: 50%;
+    max-height: 500px;
+    padding: 14px;
+}
+}
+user agent stylesheet
+div {
+    display: block;
 
   }
 
