--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -62,6 +62,7 @@
         </ul>
     </div>
 
+
     </div>
     <!------->
     <div class="logo-and-nav">
@@ -73,7 +74,19 @@
             </a>
 
         </div>
+          <nav>
 
+ <div class="share">
+                <i class="fas fa-share-square">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="share-square"
+                        class="svg-inline--fa fa-share-square fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 576 512">
+                        <path fill="black"
+                            d="M568.482 177.448L424.479 313.433C409.3 327.768 384 317.14 384 295.985v-71.963c-144.575.97-205.566 35.113-164.775 171.353 4.483 14.973-12.846 26.567-25.006 17.33C155.252 383.105 120 326.488 120 269.339c0-143.937 117.599-172.5 264-173.312V24.012c0-21.174 25.317-31.768 40.479-17.448l144.003 135.988c10.02 9.463 10.028 25.425 0 34.896zM384 379.128V448H64V128h50.916a11.99 11.99 0 0 0 8.648-3.693c14.953-15.568 32.237-27.89 51.014-37.676C185.708 80.83 181.584 64 169.033 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48v-88.806c0-8.288-8.197-14.066-16.011-11.302a71.83 71.83 0 0 1-34.189 3.377c-7.27-1.046-13.8 4.514-13.8 11.859z">
+                        </path>
+                    </svg>
+                </i>
+            </div>
 
 
         <div class="hamburger">
@@ -89,11 +102,34 @@
             </i>
 
         </div>
-        <nav>
+      
 
         </nav>
 
     </div>
+
+
+<div class="social-media">
+<i class="fas fa-window-close">
+    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="window-close" class="close svg-inline--fa fa-window-close fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-83.6 290.5c4.8 4.8 4.8 12.6 0 17.4l-40.5 40.5c-4.8 4.8-12.6 4.8-17.4 0L256 313.3l-66.5 67.1c-4.8 4.8-12.6 4.8-17.4 0l-40.5-40.5c-4.8-4.8-4.8-12.6 0-17.4l67.1-66.5-67.1-66.5c-4.8-4.8-4.8-12.6 0-17.4l40.5-40.5c4.8-4.8 12.6-4.8 17.4 0l66.5 67.1 66.5-67.1c4.8-4.8 12.6-4.8 17.4 0l40.5 40.5c4.8 4.8 4.8 12.6 0 17.4L313.3 256l67.1 66.5z"></path></svg>
+</i>
+
+    <ul>
+      
+      
+      
+    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcheerups2019.herokuapp.com%2Fcheer&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+        <li>FaceBook</li>
+    </a>
+
+
+    <a target="_blank" href="https://twitter.com/intent/tweet?text=Hello%20world">
+        <li>Twitter</li>
+    </a>
+    </ul>
+</div>
+
+
     <div class="layout-body-container">
 
         {{{body}}}
@@ -116,30 +152,8 @@
 
 
 
-    <script>window.twttr = (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0],
-                t = window.twttr || {};
-            if (d.getElementById(id)) return t;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "https://platform.twitter.com/widgets.js";
-            fjs.parentNode.insertBefore(js, fjs);
-
-            t._e = [];
-            t.ready = function (f) {
-                t._e.push(f);
-            };
-
-            return t;
-        }(document, "script", "twitter-wjs"));</script>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous"
-        src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
-
-    <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
 
     <script src="../public/app.js"></script>
-
 </body>
 
 </html>
