--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="/public/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500i&display=swap" rel="stylesheet">
     <title>Cheer Ups</title>
 </head>
 
@@ -56,9 +57,7 @@
             </li>
         </a>
 
-        <li class="more">
-            More
-        </li>
+
         </ul>
     </div>
 
@@ -74,9 +73,9 @@
             </a>
 
         </div>
-          <nav>
+        <nav>
 
- <div class="share">
+            <div class="share">
                 <i class="fas fa-share-square">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="share-square"
                         class="svg-inline--fa fa-share-square fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -89,45 +88,53 @@
             </div>
 
 
-        <div class="hamburger">
-            <i class="fas fa-bars">
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars"
-                    class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 448 512">
-                    <path fill="black"
-                        d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z">
-                    </path>
-                </svg>
+            <div class="hamburger">
+                <i class="fas fa-bars">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars"
+                        class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512">
+                        <path fill="black"
+                            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z">
+                        </path>
+                    </svg>
 
-            </i>
+                </i>
 
-        </div>
-      
+            </div>
+
 
         </nav>
 
     </div>
 
 
-<div class="social-media">
-<i class="fas fa-window-close">
-    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="window-close" class="close svg-inline--fa fa-window-close fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-83.6 290.5c4.8 4.8 4.8 12.6 0 17.4l-40.5 40.5c-4.8 4.8-12.6 4.8-17.4 0L256 313.3l-66.5 67.1c-4.8 4.8-12.6 4.8-17.4 0l-40.5-40.5c-4.8-4.8-4.8-12.6 0-17.4l67.1-66.5-67.1-66.5c-4.8-4.8-4.8-12.6 0-17.4l40.5-40.5c4.8-4.8 12.6-4.8 17.4 0l66.5 67.1 66.5-67.1c4.8-4.8 12.6-4.8 17.4 0l40.5 40.5c4.8 4.8 4.8 12.6 0 17.4L313.3 256l67.1 66.5z"></path></svg>
-</i>
+    <div class="social-media">
+        <i class="fas fa-window-close">
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="window-close"
+                class="close svg-inline--fa fa-window-close fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512">
+                <path fill="currentColor"
+                    d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-83.6 290.5c4.8 4.8 4.8 12.6 0 17.4l-40.5 40.5c-4.8 4.8-12.6 4.8-17.4 0L256 313.3l-66.5 67.1c-4.8 4.8-12.6 4.8-17.4 0l-40.5-40.5c-4.8-4.8-4.8-12.6 0-17.4l67.1-66.5-67.1-66.5c-4.8-4.8-4.8-12.6 0-17.4l40.5-40.5c4.8-4.8 12.6-4.8 17.4 0l66.5 67.1 66.5-67.1c4.8-4.8 12.6-4.8 17.4 0l40.5 40.5c4.8 4.8 4.8 12.6 0 17.4L313.3 256l67.1 66.5z">
+                </path>
+            </svg>
+        </i>
 
-    <ul>
-      
-      
-      
-    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcheerups2019.herokuapp.com%2Fcheer&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
-        <li>FaceBook</li>
-    </a>
+        <ul>
 
 
-    <a target="_blank" href="https://twitter.com/intent/tweet?text=Hello%20world">
-        <li>Twitter</li>
-    </a>
-    </ul>
-</div>
+
+            <a target="_blank"
+                href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcheerups2019.herokuapp.com%2Fcheer&amp;src=sdkpreparse"
+                class="fb-xfbml-parse-ignore">
+                <li>FaceBook</li>
+            </a>
+
+
+            <a target="_blank" href="https://twitter.com/intent/tweet?text=Hello%20world">
+                <li>Twitter</li>
+            </a>
+        </ul>
+    </div>
 
 
     <div class="layout-body-container">
