--- a/public/css/style.css
+++ b/public/css/style.css
@@ -556,14 +556,19 @@ div {
     padding: 14px;
 }
   
-.buttons{
-    margin: 5px auto;
-    text-align: center;
-}    
+   
 
 .more-btn,.edit-btn,.delete-btn{
-    height: 2em;
+    height: 25px;
     float: left;
     display: block;
     margin-left: 10px;
 }
+
+.buttons {
+    margin: 0 auto;
+    text-align: center;
+    overflow: hidden;
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
