--- a/views/show.hbs
+++ b/views/show.hbs
@@ -17,14 +17,14 @@
                 <img class="qr-code" src="../public/img/frame.png">
             </div>
             
-            <div class="buttons" >
-<form  action="/cheer/{{myInstance.title}}?_method=delete" method="post">
-    <input class="delete-btn" type="submit" value="Delete">
-    </form>
-
-    <a class="edit-btn href="/cheer/edit/{{myInstance.title}}"><button>Edit</button></a>
-</div>
         </div>
     </div>
 </div>
 
+<div class="buttons" >
+<form action="/cheer/{{myInstance.title}}?_method=delete" method="post">
+    <input class="delete-btn" type="submit" value="Delete">
+    </form>
+
+    <a class="edit-btn" href="/cheer/edit/{{myInstance.title}}"><button>Edit</button></a>
+</div>
