--- a/views/find.hbs
+++ b/views/find.hbs
@@ -1,8 +1,8 @@
-<form class="find-area" action="/cheer/show/{{this.topic}}" method="GET">
+<form class="find-area" action="http://localhost:8080/cheer/{{title}}" method="get">
     <label for="">Find Cheers</label>
 
     <h4>What topic would you like to show</h4>
-    <input type="text" name="topic" placeholder="Enter a title">
+    <input type="text" name="title" placeholder="Enter a title">
 
     <input type="submit" value="Enter">
 </form>
