--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,469 +1,443 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Raleway', sans-serif;
-    font-weight:bold; 
-
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
 }
 
-p{
-    font-size: 9px; 
+p {
+  font-size: 9px;
 }
+
+
+/************WELCOME MODAL*********/
 .modal-img {
-    width: auto;
-    height: auto;
-    max-width: 146%;
+  width: auto;
+  height: auto;
+  max-width: 146%;
 }
+
+
+
+.modal-text-box {
+  width: 95%;
+  height: 184px;
+  margin: 100px auto;
+  display: block;
+  background: #14ffe3;
+  overflow: hidden;
+  position: relative;
+  max-width: 309px;
+  max-height: 184px;
+  padding: 14px;
+}
+
+.modal-text {
+  width: 50%;
+  font-size: 10px;
+  line-height: 11px;
+  margin-top: 0px;
+}
+
+.modal-text p {
+  padding: 0px;
+}
+
+.modal-text-box-img {
+  width: 61%;
+  position: absolute;
+  left: 136px;
+  top: 35px;
+  max-width: 184px;
+  max-height: 184px;
+  min-width: 184px;
+  min-height: 184px;
+}
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  overflow: auto;
+}
+
+.modal h4 {
+    margin: 0 auto;
+  }
+  
+  .modal p {
+    margin-bottom: 5px;
+  }
+  
+  .modal button {
+    margin: 0;
+    font-size: 10px;
+  }
+/*************NAV Modal***************/
 
 .start {
-    font-family: 'Permanent Marker', cursive;
+    font-family: "Permanent Marker", cursive;
     font-size: 1em;
     margin: auto;
     text-align: center;
     padding: 24px;
-}
-
-.modal-text-box {
-    width: 95%;
-    height: 184px;
-    margin: 100px auto;
-    display: block;
-    /* background: linear-gradient(#ffad01, #fea200); */
-    background: #14FFE3;
-    overflow: hidden;
-    position: relative;
-    max-width: 309px;
-    max-height: 184px;
-    padding: 14px;
-}
-
-
-
-.modal-text {
-    width: 50%;
-    font-size: 10px;
-    line-height: 11px;
-    margin-top: 0px;
-}
-
-.modal-text p{
-    
-   padding: 0px;
-}
-
-
-.modal-text-box-img {
-    width: 61%;
-    position: absolute;
-    left: 136px;
-    top: 35px;
-    max-width: 184px;
-    max-height: 184px;
-    min-width: 184px;
-    min-height: 184px;
-}
-
-
-
-
-.modal{
- 	background-color: rgba(0,0,0,0.4);
-	position:fixed;
-	top:0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	z-index: 1;
-		/*This puts our modal in front of the body (which has a default z-index setting of `0`*/
-	overflow: auto;
-}
-
-
-
-/*************NAV Modal***************/
+  }
 
 .nav-modal {
-    width: 100%;
-    background-color: #14FFE3;
-    overflow: hidden;
-    z-index: 1;
-    position: absolute;
-    height: 100%;
-    display: none;
-    padding-top: 73px;
+  width: 100%;
+  background-color: #14ffe3;
+  overflow: hidden;
+  z-index: 1;
+  position: absolute;
+  height: 100%;
+  display: none;
+  padding-top: 73px;
 }
 
-.search, .edit, .more, .home, .login {
-    width: 100%;
-    clear: both;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: auto;
-    font-size: 2em;
+.search,
+.edit,
+.more,
+.home,
+.login {
+  width: 100%;
+  clear: both;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: auto;
+  font-size: 2em;
 }
-
-
-
 
 /******NAV**************/
 
-
-.logo-holder{
-    width:50%;
-    float: left;
+.logo-holder {
+  width: 50%;
+  float: left;
 }
-.logo-and-nav{
-    width: 100%;
+.logo-and-nav {
+  width: 100%;
 }
-nav{
-    width:45%;
-    float: left;
+nav {
+  width: 45%;
+  float: left;
 }
-nav ul{
-    float: left;
-}
-
-li{
-    list-style: none;
-}
-nav li{
-    float: left;
+nav ul {
+  float: left;
 }
 
-a{
-    text-decoration: none;
-    color:black;
+li {
+  list-style: none;
 }
-.fa-home,.fa-search,.fa-pen,.fa-sign-in-alt{
-    width: 0.8em;
-    height: 1em;
-    margin-left: 5px;
-}
-.logo{
-    font-family: 'Permanent Marker', cursive;
-    /* color: orange; */
-    color:black;
-    margin-left: 10px;
-    margin-top:0;
-    margin-bottom:0;
-    font-size: 1.5em;
-
-
+nav li {
+  float: left;
 }
 
- .fa-bars {
-        width: 20px;
-        height: 20px;
-        float: right;
-        margin-top: 4px;
+a {
+  text-decoration: none;
+  color: black;
 }
-.nav{
-    width: 50%;
-    float: left;
-    margin-top: 17px;
+.fa-home,
+.fa-search,
+.fa-pen,
+.fa-sign-in-alt {
+  width: 0.8em;
+  height: 1em;
+  margin-left: 5px;
 }
-.hamburger{
-    float: right;
-    float:right;
-    margin-right: 10px;
-}
-
-
-
-/*************/
-
-.social-media{
-    background-color: #14FFE3;
-    display: flex;
-
-    display: none;
-    width: 30%;
-    height: auto;
-    z-index: 1;
-    overflow: hidden;
-    text-align: center;
-    margin: auto;
-    position: absolute;
-    top: 8%;
-    left: 35%;
-    justify-content: space-around;
+.logo {
+  font-family: "Permanent Marker", cursive;
+  color: black;
+  margin-left: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.5em;
 }
 
-.social-media ul{padding-left: 0}
-
-.social-media li{
-    list-style: none;
-    line-height: 2em;
-    clear: both;
+.fa-bars {
+  width: 20px;
+  height: 20px;
+  float: right;
+  margin-top: 4px;
+}
+.nav {
+  width: 50%;
+  float: left;
+  margin-top: 17px;
+}
+.hamburger {
+  float: right;
+  float: right;
+  margin-right: 10px;
 }
 
-.close{
-    width: 10%;
-    height: 10%;
-    float: right;
-    margin: 5px;
-    
+/******SOCIAL MEDIA*******/
+
+.social-media {
+  background-color: #14ffe3;
+  display: flex;
+
+  display: none;
+  width: 30%;
+  height: auto;
+  z-index: 1;
+  overflow: hidden;
+  text-align: center;
+  margin: auto;
+  position: absolute;
+  top: 8%;
+  left: 35%;
+  justify-content: space-around;
+}
+
+.social-media ul {
+  padding-left: 0;
+}
+
+.social-media li {
+  list-style: none;
+  line-height: 2em;
+  clear: both;
+}
+
+.close {
+  width: 10%;
+  height: 10%;
+  float: right;
+  margin: 5px;
 }
 /******CHEERS********/
 
 .cheer-img {
-    width: auto;
-    height: auto;
-    max-width: 146%;
+  width: auto;
+  height: auto;
+  max-width: 146%;
 }
-
-
 
 .cheer-text-box {
-    width: 80%;
-    height: 184px;
-    margin: auto;
-    display: none;
-    /* background: linear-gradient(#ffad01, #fea200); */
-    background: #14FFE3;
-    overflow: hidden;
-    position: relative;
-    max-width: 309px;
-    max-height: 184px;
-    padding: 14px;
-    float: left;
-    margin-top:50px;
+  width: 80%;
+  height: 184px;
+  margin: auto;
+  display: none;
+  background: #14ffe3;
+  overflow: hidden;
+  position: relative;
+  max-width: 309px;
+  max-height: 184px;
+  padding: 14px;
+  float: left;
+  margin-top: 50px;
 }
-
-
 
 .cheer-text {
-    width: 50%;
-    font-size: 10px;
-    line-height: 11px;
-    margin-top: 0px;
+  width: 50%;
+  font-size: 10px;
+  line-height: 11px;
+  margin-top: 0px;
 }
 
-.cheer-text p{
-    
-   padding: 0px;
+.cheer-text p {
+  padding: 0px;
 }
-
 
 .cheer-text-box-img {
+  width: 61%;
+  position: absolute;
+  left: 136px;
+  top: 35px;
+  max-width: 184px;
+  max-height: 184px;
+  min-width: 184px;
+  min-height: 184px;
+}
+
+.qr-code {
+  height: 2em;
+  width: 2em;
+  float: left;
+  display: block;
+  margin-left: 10px;
+}
+
+.fa-share-square {
+  height: 2em;
+  width: 2em;
+  float: right;
+  display: block;
+  margin-left: 10px;
+}
+
+.connect {
+  position: absolute;
+  overflow: auto;
+  width: 100%;
+  bottom: 11px;
+}
+
+/**********/
+
+
+
+.arrow-holder {
+  width: 3%;
+  float: left;
+  margin: 63px 2px;
+  height: 190px;
+}
+
+/**************/
+
+.fa-chevron-right,
+.fa-chevron-left {
+  height: 100%;
+  width: 100%;
+  float: left;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  clear: both;
+}
+
+.cheer-text-box:first-of-type {
+  display: block;
+}
+
+.layout-body-container {
+  padding: 3px;
+}
+
+/********/
+.single-cheer-text-box {
+  width: 80%;
+  height: 184px;
+  margin: auto;
+  background: #14ffe3;
+  overflow: hidden;
+  position: relative;
+  max-width: 309px;
+  max-height: 184px;
+  padding: 14px;
+  float: left;
+  margin-top: 50px;
+}
+
+.cheer h4 {
+  margin: 0 auto;
+}
+.cheer p {
+  margin-bottom: 5px;
+}
+
+/***********CREATE CHEER PAGE*************/
+
+.create-area,
+.find-area,
+.edit-area,
+.login-area {
+  padding: 30px;
+  width: 80%;
+  margin: 100px auto;
+  display: block;
+  background: #14ffe3;
+  overflow: hidden;
+  position: relative;
+  padding: 14px;
+}
+
+.more-btn,
+.edit-btn,
+.delete-btn {
+  height: 25px;
+  float: left;
+  display: block;
+  margin-left: 10px;
+}
+
+.buttons {
+  margin: 0 auto;
+  text-align: center;
+  overflow: hidden;
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/****************MEDIA QUERIES*****************/
+@media (max-width: 318px) {
+    .cheer-img {
+      display: none;
+      bottom: 5px;
+    }
+  }
+  
+@media (max-width: 318px) {
+  .modal-img {
+    display: none;
+  }
+}
+
+@media (max-width: 340px) {
+  .cheer-text-box-img {
     width: 61%;
     position: absolute;
-    left: 136px;
+    left: 81px;
     top: 35px;
     max-width: 184px;
     max-height: 184px;
     min-width: 184px;
     min-height: 184px;
+  }
 }
 
-/* .cheer-img2{
-    display: none;
-} */
-
-
-    .qr-code{
-        height: 2em;
-        width: 2em;
-        float: left;
-        display: block;
-        margin-left: 10px;
-}
-
-
-.fa-share-square {
-
-    height: 2em;
-    width: 2em;
-    float: right;
-    display: block;
-    margin-left: 10px;
-}
-
-.connect{
+@media (min-width: 341px) and (max-width: 386px) {
+  .cheer-text-box-img {
+    width: 61%;
     position: absolute;
-    overflow: auto;
-    width: 100%;
-    bottom: 11px;
-}
-
-@media(max-width:318px){
-
-    .cheer-img{
-        display: none;
-        bottom: 5px;
-
-    }
-
-
-}
-
-.cheer h4{
-    margin: 0 auto;
-
-}
-
-.cheer p{
-    margin-bottom: 5px;
-
-}
-
-
-
-/************************/
-
-
-@media(max-width:318px){
-
-    .modal-img{
-        display: none;
-    }
-
-
-}
-/**********/
-
-@media(max-width:340px){
-
-    .cheer-text-box-img {
-        width: 61%;
-        position: absolute;
-        left: 81px;
-        top: 35px;
-        max-width: 184px;
-        max-height: 184px;
-        min-width: 184px;
-        min-height: 184px;
-    }
-
-
-}
-
-@media(min-width:341px) and (max-width:386px){
-    .cheer-text-box-img {
-        width: 61%;
-        position: absolute;
-        left: 94px;
-        top: 35px;
-        max-width: 184px;
-        max-height: 184px;
-        min-width: 172px;
-    }
-
-}
-
-
-
-/**********/
-
-.modal h4{
-    margin: 0 auto;
-
-}
-
-.modal p{
-    margin-bottom: 5px;
-
-}
-
-.modal button{
-    margin: 0;
-    font-size: 10px;
-}
-
-
-
-
-
-.arrow-holder{
-        width: 3%;
-        float: left;
-        margin: 63px 2px;
-        height: 190px;
-}
-
-/**************/
-
-
-.fa-chevron-right,.fa-chevron-left{
-    height: 100%;
-    width: 100%;
-    float: left;
-}
-
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    clear: both;
-}
-
-.cheer-text-box:first-of-type {
-    display: block;
-  }
-
-
-  .layout-body-container{
-      padding: 3px;
-  }
-
-
-  /********/
-  .single-cheer-text-box{
-
-    width: 80%;
-    height: 184px;
-    margin: auto;
-    /* background: linear-gradient(#ffad01, #fea200); */
-    background: #14FFE3;
-    overflow: hidden;
-    position: relative;
-    max-width: 309px;
+    left: 94px;
+    top: 35px;
+    max-width: 184px;
     max-height: 184px;
-    padding: 14px;
-    float: left;
-    margin-top:50px;
+    min-width: 172px;
+  }
 }
-  @media(min-width:379px){
-    .logo{
-        font-size: 2em;
 
-    }
-
-    .single-cheer-text-box-img {
-        width: 61%;
-            position: absolute;
-            left: 119px;
-            top: 35px;
-            max-width: 184px;
-            max-height: 184px;
-            min-width: 184px;
-            min-height: 184px;
-        }
-
-  }
-  @media(max-width:379px){
-
-    .single-cheer-text-box-img {
-        width: 61%;
-            position: absolute;
-            left: 73px;
-            top: 35px;
-            max-width: 184px;
-            max-height: 184px;
-            min-width: 184px;
-            min-height: 184px;
-        }
-
+@media (min-width: 379px) {
+  .logo {
+    font-size: 2em;
   }
 
+  .single-cheer-text-box-img {
+    width: 61%;
+    position: absolute;
+    left: 119px;
+    top: 35px;
+    max-width: 184px;
+    max-height: 184px;
+    min-width: 184px;
+    min-height: 184px;
+  }
+}
+@media (max-width: 379px) {
+  .single-cheer-text-box-img {
+    width: 61%;
+    position: absolute;
+    left: 73px;
+    top: 35px;
+    max-width: 184px;
+    max-height: 184px;
+    min-width: 184px;
+    min-height: 184px;
+  }
+}
 
-  @media(min-width:700px){
-
-   
-
-.modal-text-box-img {
+@media (min-width: 700px) {
+  .modal-text-box-img {
     width: 61%;
     position: absolute;
     left: 67%;
@@ -474,9 +448,9 @@ a{
     min-height: 184px;
     transform: translate(-50%, -50%);
     transform-origin: center center;
-}
+  }
 
-.single-cheer-text-box-img {
+  .single-cheer-text-box-img {
     width: 61%;
     position: absolute;
     left: 67%;
@@ -487,89 +461,46 @@ a{
     min-height: 184px;
     transform: translate(-50%, -50%);
     transform-origin: center center;
-}
-
-
-.modal-text-box {
-    resize: both;
-    height: 192px;
-    width: 95%;
-    margin: 100px auto;
-    display: block;
-    /* background: linear-gradient(#ffad01, #fea200); */
-    background: #14FFE3;
-    overflow: hidden;
-    position: relative;
-    max-width: 50%;
-    max-height: 500px;
-    padding: 14px;
-}
-
-
-.single-cheer-text-box {
-    resize: both;
-    height: 192px;
-    width: 95%;
-    margin: 100px auto;
-    display: block;
-    /* background: linear-gradient(#ffad01, #fea200); */
-    background: #14FFE3;
-    overflow: hidden;
-    position: relative;
-    max-width: 50%;
-    max-height: 500px;
-    padding: 14px;
-}
-}
-@media(min-width:776px){
-
-    
-    .single-cheer-text-box p {
-        font-size: 2em;
-        line-height: 1;
-        margin: 47px auto;
-    }
-    .single-cheer-text-box h4{
-        font-size: 2em;
-        margin: 10px auto;
-    }
-}
-
-
-div {
-    display: block;
-
   }
 
-  .create-area,.find-area,.edit-area,.login-area{
-    padding: 30px;
-    width: 80%;
-    /* height: 184px; */
+  .modal-text-box {
+    resize: both;
+    height: 192px;
+    width: 95%;
     margin: 100px auto;
     display: block;
-    /* background: linear-gradient(#ffad01, #fea200); */
-    background: #14FFE3;
+    background: #14ffe3;
     overflow: hidden;
     position: relative;
-    /* max-width: 309px; */
-    /* max-height: 184px; */
+    max-width: 50%;
+    max-height: 500px;
     padding: 14px;
-}
-  
-   
+  }
 
-.more-btn,.edit-btn,.delete-btn{
-    height: 25px;
-    float: left;
+  .single-cheer-text-box {
+    resize: both;
+    height: 192px;
+    width: 95%;
+    margin: 100px auto;
     display: block;
-    margin-left: 10px;
+    background: #14ffe3;
+    overflow: hidden;
+    position: relative;
+    max-width: 50%;
+    max-height: 500px;
+    padding: 14px;
+  }
+}
+@media (min-width: 776px) {
+  .single-cheer-text-box p {
+    font-size: 2em;
+    line-height: 1;
+    margin: 47px auto;
+  }
+  .single-cheer-text-box h4 {
+    font-size: 2em;
+    margin: 10px auto;
+  }
 }
 
-.buttons {
-    margin: 0 auto;
-    text-align: center;
-    overflow: hidden;
-    width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-}
+
