--- a/views/find.hbs
+++ b/views/find.hbs
@@ -1,4 +1,4 @@
-<form class="find-area" action="http://localhost:8080/cheer/{{title}}" method="get">
+<form class="find-area" action="/cheer/find" method="post">
     <label for="">Find Cheers</label>
 
     <h4>What topic would you like to show</h4>
