--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,15 +2,15 @@
     <div class="modal-text-box">
 
         <div class="modal-text">
-            <h4>Welcome to Cheer Ups</h4>
-            <h6>This app not only allows you to brighten up your day. You can also pay it forward by creating and
+            <h2>Welcome to Cheer Ups</h2>
+            <p class="modal-p">This app not only allows you to brighten up your day. You can also pay it forward by creating and
                 sharing
-                quotes that will brighten the days of others</h6>
+                quotes that will brighten the days of others</p>
 
-            <h6>At the bottom of each Cheer Up is an option to share. You can share via Social Media or Email</h6>
+            <p class="modal-p">At the bottom of each Cheer Up is an option to share. You can share via Social Media or Email</p>
 
-            <h6>There is also a QRcode at the bottom of each Cheer Up. This allows you to scan and view the Cheer Up on
-                Android and iOS devices.</h6>
+            <p class="modal-p">There is also a QRcode at the bottom of each Cheer Up. This allows you to scan and view the Cheer Up on
+                Android and iOS devices.</p>
 
             <button class="modal-button">Enter</button>
 
@@ -51,9 +51,6 @@
         </div>
         <div class="cheer-text-box-img">
             <img class="cheer-img" src="../public/img/Canva - Cheerful Young Man Wearing Plaid Shirt Standing.png">
-
-            <img class="cheer-img2"
-                src="../public/img/Canva - Young Loving Couple Jumping Isolated over Yellow Background_.png">
 
         </div>
         <div class="connect">
