--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
 
 <body>
 
-    <!------>
+    <!---NAV MODAL--->
     <div class="nav-modal">
         <a href="/">
             <li class="home">
@@ -59,7 +59,7 @@
         </ul>
     </div>
     </div>
-    <!------->
+    <!--LOGO AND NAV BAR----->
     <div class="logo-and-nav">
 
         <div class="logo-holder">
@@ -103,6 +103,7 @@
 
     </div>
 
+<!--SOCIAL MEDIA MODAL-->
 
     <div class="social-media">
         <i class="fas fa-window-close">
@@ -132,13 +133,13 @@
         </ul>
     </div>
 
-
+<!------LAYOUT CONTAINER----->
     <div class="layout-body-container">
 
         {{{body}}}
 
     </div>
-
+<!----ADDING JS AN FONTAWESOME---->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
