--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
 
         </div>
         <div class="modal-text-box-img">
-            <img class="modal-img" src="../public/img/Canva - Cheerful Young Man Wearing Plaid Shirt Standing.png">
+            <img alt="guy" class="modal-img" src="../public/img/thisguy.png">
 
         </div>
 
@@ -50,13 +50,13 @@
 
         </div>
         <div class="cheer-text-box-img">
-            <img class="cheer-img" src="../public/img/Canva - Cheerful Young Man Wearing Plaid Shirt Standing.png">
+            <img alt="guy" class="cheer-img" src="../public/img/thisguy.png">
 
         </div>
         <div class="connect">
             <a class="more-btn" href="/cheer/{{this.title}}"> <button>More</button></a>
             <div class="qr-code">
-                <img class="qr-code" src="../public/img/frame.png">
+                <img alt="gr-code" class="qr-code" src="../public/img/frame.png">
             </div>
 
         </div>
