--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,8 +15,9 @@
 
     <!---NAV MODAL--->
     <div class="nav-modal">
-        <a href="/">
             <li class="home">
+                        <a href="/">
+
                 <i class="fas fa-home">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home"
                         class="svg-inline--fa fa-home fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -27,10 +28,12 @@
                     </svg>
                 </i>
                 Home
+                    </a>
             </li>
-        </a>
-        <a href="/cheer/new">
+    
+        
             <li class="edit">
+                <a href="/cheer/new">
                 <i class="fas fa-pen">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pen"
                         class="svg-inline--fa fa-pen fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -40,10 +43,12 @@
                         </path>
                     </svg>
                 </i>
-                Create</li>
-        </a>
-        <a href="/cheer/find">
+
+                Create   </a></li>
+     
             <li class="search">
+                        <a href="/cheer/find">
+
                 <i class="fas fa-search">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
                         class="svg-inline--fa fa-search fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -54,8 +59,9 @@
                     </svg>
                     Find
                 </i>
+                        </a>
+
             </li>
-        </a>
         </ul>
     </div>
     </div>
