--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,9 +7,7 @@
                 sharing
                 quotes that will brighten the days of others</p>
 
-            <p class="modal-p">At the bottom of each Cheer Up is an option to share. You can share via Social Media or Email</p>
-
-            <p class="modal-p">There is also a QRcode at the bottom of each Cheer Up. This allows you to scan and view the Cheer Up on
+            <p class="modal-p">There is a QRcode at the bottom of each Cheer Up. This allows you to scan and view the Cheer Up on
                 Android and iOS devices.</p>
 
             <button class="modal-button">Enter</button>
