--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -132,8 +132,10 @@
                 <li>FaceBook</li>
             </a>
 
+            <a target="_blank" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20cool%20app%20that%20allows%20me%20to%20create%20and%20send%20encouraging%20words!">
 
-            <a target="_blank" href="https://twitter.com/intent/tweet?text=Hello%20world">
+
+
                 <li>Twitter</li>
             </a>
         </ul>
