clean up code formatting

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,8 +15,8 @@
 
     <!---NAV MODAL--->
     <div class="nav-modal">
-            <li class="home">
-                        <a href="/">
+        <li class="home">
+            <a href="/">
 
                 <i class="fas fa-home">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home"
@@ -28,12 +28,12 @@
                     </svg>
                 </i>
                 Home
-                    </a>
-            </li>
-    
-        
-            <li class="edit">
-                <a href="/cheer/new">
+            </a>
+        </li>
+
+
+        <li class="edit">
+            <a href="/cheer/new">
                 <i class="fas fa-pen">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pen"
                         class="svg-inline--fa fa-pen fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -44,10 +44,10 @@
                     </svg>
                 </i>
 
-                Create   </a></li>
-     
-            <li class="search">
-                        <a href="/cheer/find">
+                Create </a></li>
+
+        <li class="search">
+            <a href="/cheer/find">
 
                 <i class="fas fa-search">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
@@ -59,9 +59,9 @@
                     </svg>
                     Find
                 </i>
-                        </a>
+            </a>
 
-            </li>
+        </li>
         </ul>
     </div>
     </div>
@@ -109,7 +109,7 @@
 
     </div>
 
-<!--SOCIAL MEDIA MODAL-->
+    <!--SOCIAL MEDIA MODAL-->
 
     <div class="social-media">
         <i class="fas fa-window-close">
@@ -132,7 +132,9 @@
                 <li>FaceBook</li>
             </a>
 
-            <a target="_blank" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20cool%20app%20that%20allows%20me%20to%20create%20and%20send%20encouraging%20words!" data-url="http://cheerups2019.herokuapp.com">
+            <a target="_blank"
+                href="https://twitter.com/intent/tweet?text=Check%20out%20this%20cool%20app%20that%20allows%20me%20to%20create%20and%20send%20encouraging%20words!"
+                data-url="http://cheerups2019.herokuapp.com">
 
 
 
@@ -141,13 +143,13 @@
         </ul>
     </div>
 
-<!------LAYOUT CONTAINER----->
+    <!------LAYOUT CONTAINER----->
     <div class="layout-body-container">
 
         {{{body}}}
 
     </div>
-<!----ADDING JS AN FONTAWESOME---->
+    <!----ADDING JS AN FONTAWESOME---->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
